ti-opencl (01.01.01.01-0ubuntu0~ppa1) trusty; urgency=medium

  * Make __malloc/free_ddr/msmc() thread safe, use Lock to guard the
    bookkeeping map accesses.

  * Update to always flush buffers after kernel execution, even when kernel
    has only WRITE_ONLY buffers

  * Update MPX examples to query available memory and allocate buffers
    accordingly

 -- TI Keystone PPA <ti-keystone-ppa@list.ti.com>  Fri, 17 Apr 2015 15:48:32 -0500

ti-opencl (01.01.00.03-0ubuntu0~ppa1) trusty; urgency=medium

  * Added signal handler in opencl to cleanup if user hits ctrl-c during
    OpenCL execution.

  * Updated ARM makefile install to include new monitor file 'dsp_syms.obj'.

 -- TI Keystone PPA <ti-keystone-ppa@list.ti.com>  Tue, 14 Apr 2015 15:03:01 -0500

ti-opencl (01.01.00.02-0ubuntu0~ppa1) trusty; urgency=medium

  * Modified the monitor mechanism for mapping builtin functions names to
    address from being text based to being object based.  This speeds link
    time significantly.

  * Update version scheme for debian packaging to ww.xx.yy.zz format.
    Where:
        ww.xx - Maps to supported OpenCL specification version. Currently 1.1.
        yy    - TI release
        zz    - TI patch release

 -- TI Keystone PPA <ti-keystone-ppa@list.ti.com>  Fri, 10 Apr 2015 15:38:44 -0500

ti-opencl (01.01.00.01-0ubuntu0~ppa1) trusty; urgency=medium

  * Make OpenCL use Resource Manager (RM) to allocate QMSS resources on the
    ARM side and pass to DSP for QMSS use.

 -- TI Keystone PPA <ti-keystone-ppa@list.ti.com>  Mon, 23 Mar 2015 16:04:26 -0500

ti-opencl (01.01.00.00-0ubuntu0~ppa3) trusty; urgency=medium

  * Fixed a C++ global objects destruction ordering problem that can cause
    segmentation fault at OpenCL application exit.

 -- TI Keystone PPA <ti-keystone-ppa@list.ti.com>  Thu, 05 Mar 2015 09:38:59 -0600

ti-opencl (01.01.00.00-0ubuntu0~ppa2) trusty; urgency=medium

  * Change use of QMSS resources to avoid conflicts with mpi.